--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "v-modal-backdrop": "^1.0.3",
     "vue": "^3.2.45",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
